<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".ui.AboutFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:elevation="0dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        style="@style/Widget.App.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title=" ">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/el_messiri_bold"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_clear_dark" />
    </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/about1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="25dp"
        android:text="@string/about_text1"
        android:textColor="@color/TextColorPrimary"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/about2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:textColor="@color/TextColorPrimary"
        android:textSize="15sp"
        android:text="@string/about_text2"/>

    <TextView
        android:id="@+id/about3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:textColor="@color/TextColorPrimary"
        android:textSize="15sp"
        android:text="@string/about_text3"/>

    <TextView
        android:id="@+id/about4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="25dp"
        android:textColor="@color/TextColorPrimary"
        android:textSize="15sp"
        android:text="@string/about_text4" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>