<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.profile.RegisterFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="24dp"
            android:paddingTop="16dp"
            android:layout_marginBottom="45dp">
            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="333dp"
                android:layout_height="333dp"
                android:src="@mipmap/aqsa_landmarks_logo"
                android:layout_gravity="center"/>

            <!-- Snippet from "Add text fields" section goes here. -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_text_input"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/email_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_text_input"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/user_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_input"
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/password_hint"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/TextColorPrimary"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/register_button"
                    style="@style/ThemeOverlay.App.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:padding="15dp"
                    android:text="@string/register_button_text"
                    android:textColor="#FFFFFF"
                    android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>
</layout>
