<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyle"
        android:indeterminateDrawable="@drawable/progress"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor"
        tools:context=".ui.profile.OpeningFragment">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="255dp"
            android:layout_marginTop="95dp"
            android:src="@drawable/aqsa_magnifier_short"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            style="@style/Widget.App.Button"
            android:layout_width="245dp"
            android:layout_height="75dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="7dp"
            android:text="@string/login_button_text"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/register_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon" />

        <ImageView
            android:id="@+id/google_sign_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_button"
            app:layout_constraintStart_toEndOf="@+id/login_button"
            app:layout_constraintBottom_toBottomOf="@id/login_button"
            app:srcCompat="@drawable/common_google_signin_btn_icon_light" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.App.Button"
            android:layout_width="245dp"
            android:layout_height="75dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="7dp"
            android:padding="7dp"
            android:text="@string/register_button_text"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/try_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/try_button"
            style="@style/Widget.App.Button"
            android:layout_width="245dp"
            android:layout_height="75dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="95dp"
            android:padding="7dp"
            android:text="@string/try_button_text"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>